<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.View.LectureDetailsPageFragment"
    android:id="@+id/detailView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LectureDetails">

        <TextView
            android:id="@+id/professorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/dozent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/timeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseNameTextView" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/zeiten"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/semesterTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />

        <TextView
            android:id="@+id/semesterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/semester"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/roomTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/roomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="100dp"
            android:text="@string/roomText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/inhaltTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/courseNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/className"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/moreInformationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/moreInfoText"
            app:layout_constraintBottom_toTopOf="@+id/inhaltTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomTextView" />

        <TextView
            android:id="@+id/inhaltTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="70dp"
            android:text="@string/contentText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/examTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/examTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="84dp"
            android:text="@string/examText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/studentsButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/studentsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/participantText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/joinText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/professorEditableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/dozentExample"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/timeEditableTextView"
            app:layout_constraintStart_toEndOf="@+id/professorName"
            app:layout_constraintTop_toBottomOf="@+id/courseNameTextView" />

        <TextView
            android:id="@+id/timeEditableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="32dp"
            android:text="@string/timeExample"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/semesterEditableTextView"
            app:layout_constraintStart_toEndOf="@+id/timeTextView" />

        <TextView
            android:id="@+id/semesterEditableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="32dp"
            android:text="@string/semesterExample"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/roomEditableTextView"
            app:layout_constraintStart_toEndOf="@+id/semesterTextView" />

        <TextView
            android:id="@+id/roomEditableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="100dp"
            android:text="@string/roomExample"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/inhaltTextView"
            app:layout_constraintStart_toEndOf="@+id/roomTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>