<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:layout_marginLeft="@dimen/standard"
    android:layout_marginRight="@dimen/standard"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/roomName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/Raum"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/roomBuilding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/roomBuilding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Gebäude"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/roomName"
        app:layout_constraintStart_toEndOf="@+id/roomName" />

    <TextView
        android:id="@+id/busyCourseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/className"
        android:visibility="invisible"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/roomName"
        app:layout_constraintTop_toBottomOf="@+id/roomName" />

</androidx.constraintlayout.widget.ConstraintLayout>